--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -41,7 +41,7 @@
 }
 
 #ConvertFrom{
-    font-size: 2.3vw;
+    font-size: clamp(14px, 2.3vw, 22px);
     padding: 5px;
     font-style: italic;
     cursor: pointer;
@@ -62,37 +62,48 @@
     overflow: hidden;
     border-radius: 10px;
     justify-content: center;
+    
 }
+.dropdown{
+  
+    height: 3vh;
+    width: 15%;
+    padding: 5px ;
+    border-radius: 10px;
+}
+
 #right .dropdown {
+    flex: 1;
     display: flex;
+    position: relative;
+    border-radius: 10px; 
+    height: 5vh;
     width: 30%;
-    height: 10%;
     justify-content: center;
     margin-top: 145px;
 }
 
-.dropdown{
-    position: relative;
-    border-radius: 10px; 
-    padding: 5px;
-    height: 5vh;
-    width: 15vw;
-}
+
 #dropdownContainer span{
-    font-size: 80%;
+    display: inline-block;  
+    max-width: 100%; 
+    text-overflow: ellipsis;
+    overflow: hidden; 
+    white-space: nowrap;
 }
+
 .dropdownItems{
+    text-align: center;
     position: relative;
     display: flex;
     flex-wrap: wrap;
     background-color: rgb(168, 167, 167);
-    top: 15px;
+    top: 8px;
     border-radius: 10px;
     box-shadow: 0px 2px 5px 0px black;
     opacity: 0;
     transition: opacity 250ms ease-in-out;
     pointer-events: none;
-    padding: 5px 5px 5px 5px;
     gap: 5px;
     
 }
@@ -104,10 +115,18 @@
     flex: 1 1 auto;
     border-radius: 5px;
     width: 25%;
+    display: block
 }
 #left .dropdownItems{
     width: fit-content;
-    margin-left: -55px;
+
+    height: fit-content;
+    text-align: center;
+}
+
+#right .dropdownItems{
+    width: fit-content;
+    top: 48px;
     height: fit-content;
 }
 
@@ -117,7 +136,7 @@
 }
 .dropdown:hover span::after{
     content: '\02C5' ;
-    padding-left: 10px;
+    
 }
 
 #dropdownContainer{
