--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -2,9 +2,13 @@
     width: 100%;
     display: flex;
     height: 100%;
+    
 }
 #left{
     width:100%;
+    
+}
+body{
     background-color: rgb(255, 227, 217);
 }
 #right{
@@ -15,11 +19,12 @@
     height: 100%;
     text-align: center;
     cursor: pointer;
-    display: flex;
+    display: none;
     flex-wrap: wrap;
     padding-left: 5px;
     
 }
+
 #right > *:last-child {
   align-self:center;
   margin-right: 25%;
