Changes to application UI

--- a/templates/MainPage.html
+++ b/templates/MainPage.html
@@ -52,16 +52,13 @@
       </div>
 
       <div id="right">
-        <button id="ConvertFrom"></button>
-          <div class="dropdown">
-            <button id="ConvertTo">...</button>
-              <div >
-
-              </div>
-          </div>
-          
+        <div >
+          <span id="inputError"> </span>
+        </div><!-- show by defualt, if drubdown item is pressed hide this -->
+        <span id="ConvertFrom">Select a format</span> <!-- /hide till a dropdownitems pressed-->
+        
         <button id="ConvertBtn">Convert</button>
-        <div id="downloadFile"><a href="#">download here!</a></div>
+        <div id="downloadFile"><a href="#">download here!</a></div> <!-- //hide till we get a response -->
       </div>
       
     </div>
